--- a/Vector dot and cross product.html
+++ b/Vector dot and cross product.html
@@ -10,7 +10,7 @@
 <body>
   <h2>Vector Algebra: Dot Product & Cross Product</h2>
   <p>Enter vectors A and B (comma-separated, 3 components):</p>
-  
+  <!-- This is a comment to resolve 'nothing to commit'-->
   <input id="vectorA" value="1,2,3">
   <input id="vectorB" value="4,5,6">
   <button onclick="calculate()">Calculate</button>
